// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo should create a todo 1`] = `
{
  "data": {
    "createTodo": {
      "content": "Test todo.",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Todo should get a todo 1`] = `
{
  "data": {
    "getTodo": {
      "content": "todo 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
